fix(status): adding fixes for font-size on parent causing layout shift.

--- a/packages/web-components/src/components/rux-status/rux-status.scss
+++ b/packages/web-components/src/components/rux-status/rux-status.scss
@@ -13,4 +13,5 @@
 }
 .status-wrapper {
     width: var(--spacing-3);
+    font-size: var(--font-size-base); //fixes issue where parent element with larger font-size causes layout shift.
 }
